исправляет БЭМ в разметке

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -15,15 +15,15 @@
     <img class="header__logo" src="#" width="60" height="50" alt="Логотип Кэт энерджи">
     <p class="header__name name">cat energy</p>
     <nav class="header__nav">
-      <ul class="header__nav__list">
-        <li class="header__nav__item">
-          <a class="header__nav__link" href="index.html">главная</a>
+      <ul class="header__list">
+        <li class="header__item">
+          <a class="header__link" href="index.html">главная</a>
         </li>
-        <li class="header__nav__item-active">
-          <a class="header__nav__link" href="#">каталог продукции</a>
+        <li class="header__item-active">
+          <a class="header__link" href="#">каталог продукции</a>
         </li>
-        <li class="header__nav__item">
-          <a class="header__nav__link" href="#">подбор программы</a>
+        <li class="header__item">
+          <a class="header__link" href="#">подбор программы</a>
         </li>
       </ul>
     </nav>
@@ -149,26 +149,26 @@
   </main>
 
   <footer class="page-footer">
-    <p class="footer__name name">cat energy</p>
-    <ul class="footer__list-contacts">
-      <li class="footer__item-contacts">
-        <a class="footer__link-contacts" href="#">
+    <p class="page-footer__name name">cat energy</p>
+    <ul class="page-footer__list-contacts">
+      <li class="page-footer__item-contacts">
+        <a class="page-footer__link-contacts" href="#">
           <span>Вконтакте</span>
         </a>
       </li>
-      <li class="footer__item-contacts">
-        <a class="footer__link-contacts" href="#">
+      <li class="page-footer__item-contacts">
+        <a class="page-footer__link-contacts" href="#">
           <span>Телеграм</span>
         </a>
       </li>
-      <li class="footer__item-contacts">
-        <a class="footer__link-contacts" href="#">
+      <li class="page-footer__item-contacts">
+        <a class="page-footer__link-contacts" href="#">
           <span>Ютуб</span>
         </a>
       </li>
     </ul>
-    <div class="footer__htmlacademy">
-      <a class="footer__htmlacademy-link" href="https://htmlacademy.ru/study">html Academy</a>
+    <div class="page-footer__htmlacademy">
+      <a class="page-footer__htmlacademy-link" href="https://htmlacademy.ru/study">html Academy</a>
     </div>
   </footer>
 </body>
