--- a/source/index.html
+++ b/source/index.html
@@ -14,16 +14,16 @@
   <header class="header">
     <img class="header__logo" src="#" width="60" height="50" alt="Логотип Кэт энерджи">
     <p class="header__name name">cat energy</p>
-    <nav class="header__nav">
-      <ul class="header__list">
-        <li class="header__item-active">
-          <a class="header__link" href="#">главная</a>
+    <nav class="nav">
+      <ul class="nav__list">
+        <li class="nav__item-active">
+          <a class="nav__link" href="#">главная</a>
         </li>
-        <li class="header__item">
-          <a class="header__link" href="catalog.html">каталог продукции</a>
+        <li class="nav__item">
+          <a class="nav__link" href="catalog.html">каталог продукции</a>
         </li>
-        <li class="header__item">
-          <a class="header__link" href="#">подбор программы</a>
+        <li class="nav__item">
+          <a class="nav__link" href="#">подбор программы</a>
         </li>
       </ul>
     </nav>
