--- a/source/index.html
+++ b/source/index.html
@@ -9,14 +9,14 @@
   <script src="scripts/index.js" defer></script>
 </head>
 
-<body class="page-body">
+<body class="page__body">
 
   <header class="header">
     <img class="header__logo" src="#" width="60" height="50" alt="Логотип Кэт энерджи">
-    <p class="header__name name">cat energy</p>
+    <img class="logo" src="#" width="34" height="23" alt="Название сайта">
     <nav class="nav">
       <ul class="nav__list">
-        <li class="nav__item-active">
+        <li class="nav__item nav__item--active">
           <a class="nav__link" href="#">главная</a>
         </li>
         <li class="nav__item">
@@ -26,10 +26,13 @@
           <a class="nav__link" href="#">подбор программы</a>
         </li>
       </ul>
+      <button class="nav__burger-button button" type="button">
+        <span class="visually-hidden">кнопка открытия меню</span>
+      </button>
     </nav>
   </header>
 
-  <main class="page-main">
+  <main class="main">
     <section class="cover">
       <h1 class="cover__title title">Функциональное <br>питание для котов</h1>
       <span class="cover__description">Занялся собой? Займись котом!</span>
@@ -44,14 +47,12 @@
           <p class="catalog__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
           </p>
           <a class="catalog__link" href="#">каталог slim</a>
-          <img class="catalog__image" src="#" width="200" height="211" alt="Кот сидит">
         </li>
         <li class="catalog__item">
           <h3 class="catalog__title">набор массы</h3>
           <p class="catalog__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
           </p>
           <a class="catalog__link" href="#">каталог pro</a>
-          <img class="catalog__image" src="#" width="200" height="211" alt="Кот идёт">
         </li>
       </ul>
     </section>
@@ -60,19 +61,15 @@
       <h2 class="how-work__title title">Как это работает</h2>
       <ul class="how-work__list">
         <li class="how-work__item">
-          <span class="how-work__stage-first"></span>
           <p class="how-work__text">Функциональное питание содержит только полезные питательные вещества.</p>
         </li>
         <li class="how-work__item">
-          <span class="how-work__stage-second"></span>
           <p class="how-work__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
         </li>
         <li class="how-work__item">
-          <span class="how-work__stage-third"></span>
           <p class="how-work__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
         </li>
         <li class="how-work__item">
-          <span class="how-work__stage-fourth"></span>
           <p class="how-work__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
         </li>
       </ul>
@@ -81,17 +78,17 @@
     <section class="example">
       <h2 class="example__title title">Живой пример</h2>
       <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-      <ul class="example__list">
-        <li class="example__item">
-          <span class="example__weight-info">5 кг</span>
-          <span class="example__text-info">снижение веса</span>
-        </li>
-        <li class="example__item">
-          <span class="example__weight-info">60 дней</span>
-          <span class="example__text-info">затрачено времени</span>
-        </li>
-      </ul>
+      <div class="example__info">
+        <span class="example__weight-info">5 кг</span>
+        <span class="example__text-info">снижение веса</span>
+      </div>
+      <div class="example__info">
+        <span class="example__weight-info">60 дней</span>
+        <span class="example__text-info">затрачено времени</span>
+      </div>
       <p class="example__info-price">Затраты на питание: <span class="example__info-price">15 000 руб.</span></p>
+      <img class="example__image-cat" src="#" width="34" height="21" alt="крупный кот">
+      <img class="example__image-cat" src="#" width="34" height="21" alt="тощий кот">
     </section>
 
     <div class="address">
@@ -102,27 +99,27 @@
 
   </main>
 
-  <footer class="page-footer">
-    <p class="page-footer__name name">cat energy</p>
-    <ul class="page-footer__list-contacts">
-      <li class="page-footer__item-contacts">
-        <a class="page-footer__link-contacts" href="#">
-          <span>Вконтакте</span>
+  <footer class="footer">
+    <img class="logo" src="#" width="34" height="23" alt="Название сайта">
+    <ul class="footer__list-contacts">
+      <li class="footer__item-contacts">
+        <a class="footer__link-contacts" href="#">
+          <span class="visually-hidden">Вконтакте</span>
         </a>
       </li>
-      <li class="page-footer__item-contacts">
-        <a class="page-footer__link-contacts" href="#">
-          <span>Телеграм</span>
+      <li class="footer__item-contacts">
+        <a class="footer__link-contacts" href="#">
+          <span class="visually-hidden">Телеграм</span>
         </a>
       </li>
-      <li class="page-footer__item-contacts">
-        <a class="page-footer__link-contacts" href="#">
-          <span>Ютуб</span>
+      <li class="footer__item-contacts">
+        <a class="footer__link-contacts" href="#">
+          <span class="visually-hidden">Ютуб</span>
         </a>
       </li>
     </ul>
-    <div class="page-footer__htmlacademy">
-      <a class="page-footer__htmlacademy-link" href="https://htmlacademy.ru/study">html Academy</a>
+    <div class="footer__htmlacademy">
+      <a class="footer__htmlacademy-link" href="https://htmlacademy.ru/study">html Academy</a>
     </div>
   </footer>
 </body>
