--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,8 @@
   <title>Название проекта</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="styles/styles.css">
+  <link rel="icon" href="favicon32.ico">
+  <link rel="icon" href="./favicons/favicon16.svg" type="image/png">
   <script src="scripts/index.js" defer></script>
 </head>
 
@@ -14,15 +16,15 @@
   <header class="header">
     <a class="header__logo-link" href="#">
       <picture>
-        <source class="header__logo-desktop" media=" (min-width:1440px)" width="70" type="image/svg+xml" height="59" srcset="./images/logotype-icon-desktop.svg 1x, ./images/logotype-icon-desktop@2x.svg 2x">
-        <source class="header__logo-tablet" media="(min-width:768px)" width="60" type="image/svg+xml" height="50" srcset="./images/logotype-icon-tablet.svg 1x, ./images/logotype-icon-tablet@2.svg 2x">
-        <img class="header__logo-mobile" src="./images/logotype-icon-mobile.svg" width="60" height="50" alt="Логотип Кэт энерджи" srcset="./images/logotype-icon-mobile@2x.svg">
+        <source class="header__logo-desktop" media=" (min-width:1440px)" width="70" type="image/svg+xml" height="59" srcset="./images/logotype-icon-desktop.svg">
+        <source class="header__logo-tablet" media="(min-width:768px)" width="60" type="image/svg+xml" height="50" srcset="./images/logotype-icon-tablet.svg">
+        <img class="header__logo-mobile" src="./images/logotype-icon-mobile.svg" width="60" height="50" alt="Логотип Кэт энерджи">
       </picture>
     </a>
     <a class="header__name-link" href="#">
       <picture>
-        <source class="header__logo-desktop" media=" (min-width:1440px)" width="118" type="image/svg+xml" height="21" srcset="./images/logotype-name.svg 1x, ./images/logotype-name@2x.svg 2x">
-        <img class="header__logo-name-mobile-tablet" src="./images/logotype-name.svg" width="101" height="18" alt="Название сайта" srcset="./images/logotype-name@2x.svg">
+        <source class="header__logo-desktop" media=" (min-width:1440px)" width="118" type="image/svg+xml" height="21" srcset="./images/logotype-name.svg">
+        <img class="header__logo-name-mobile-tablet" src="./images/logotype-name.svg" width="101" height="18" alt="Название сайта">
       </picture>
     </a>
     <nav class="nav">
@@ -52,10 +54,10 @@
       <span class="cover__description">Занялся собой? Займись котом!</span>
       <a class="cover__button" href="#">подобрать программу</a>
       <picture>
-        <source class="cover__product-desktop" media=" (min-width:1440px)" width="552" type="image/png" height="499" srcset="./images/index-can-desktop@1x.png 1x,
-        ./images/index-can-desktop@2x.png 2x">"
-        <source class="cover__product-tablet" media="(min-width:768px)" width="709" type="image/png" height="609" srcset="./images/index-can-tablet 1@1x.png 1x, ./images/index-can-tablet 1@2x.png 2x">
-        <img class="cover__product-mobile" src="./images/index-can-mobile@1x.png" width="280" height="270" alt="Корм для кошек" srcset=" ./images/index-can-mobile@2x.png 2x">
+        <source class="cover__product-desktop" media=" (min-width:1440px)" width="552" type="image/png" height="499" srcset="./images/feed-hero-desktop@1x.png 1x,
+        ./images/feed-hero-desktop@2x.png 2x">"
+        <source class="cover__product-tablet" media="(min-width:768px)" width="709" type="image/png" height="609" srcset="./images/feed-hero-tablet 1@1x.png 1x, ./images/feed-hero-tablet 1@2x.png 2x">
+        <img class="cover__product-mobile" src="./images/feed-hero-mobile@1x.png" width="280" height="270" alt="Корм для кошек" srcset=" ./images/feed-hero-mobile@2x.png 2x">
       </picture>
     </section>
 
@@ -116,16 +118,22 @@
       </picture>
     </section>
 
-    <div class="address">
+    <section class="address">
+      <h3 class="visually-hidden">Адрес</h3>
       <p class="address__text">приглашаем к сотрудничеству дилеров!</p>
       <address class="address__info">ул. Большая Конюшенная, д. 19/8</address>
       <address class="address__info">Санкт-Петербург</address>
-    </div>
+      <picture>
+        <source class="addres__image-desktop" media=" (min-width:1440px)" width="1440" type="image/png" height="400" srcset="./images/map-desktop@1x.png 1x, ./images/map-desktop@2x.png 2x">
+        <source class="addres__image-tablet" media="(min-width:768px)" width="768" type="image/png" height="400" srcset="./images/map-tabletp@1x.png 1x, ./images/map-tablet@2x.png 2x">
+        <img class="address__image-mobile" src="./images/map-mobile@1x.png" width="320" height="362" alt="Карта адреса" srcset="./images/map-mobile@2x.png">
+      </picture>
+    </section>
 
   </main>
 
   <footer class="footer">
-    <img class="footer__logo-name-mobile-tablet" src="./images/logotype-name.svg" width="128" height="24" alt="Название сайта" srcset="./images/logotype-name@2x.svg">
+    <img class="footer__logo-name-mobile-tablet" src="./images/logotype-name.svg" width="128" height="24" alt="Название сайта">
     <ul class="footer__list-contacts">
       <li class="footer__item-contacts">
         <a class="footer__link-contacts" href="#">
