--- a/source/catalog.html
+++ b/source/catalog.html
@@ -189,8 +189,8 @@
       <address class="address__info">ул. Большая Конюшенная, д. 19/8</address>
       <address class="address__info">Санкт-Петербург</address>
       <picture>
-        <source class="addres__image-desktop" media=" (min-width:1440px)" width="1440" type="image/png" height="400" srcset="./images/map-desktop@1x.png 1x, ./images/map-desktop@2x.png 2x">
-        <source class="addres__image-tablet" media="(min-width:768px)" width="768" type="image/png" height="400" srcset="./images/map-tabletp@1x.png 1x, ./images/map-tablet@2x.png 2x">
+        <source class="address__image-desktop" media=" (min-width:1440px)" width="1440" type="image/png" height="400" srcset="./images/map-desktop@1x.png 1x, ./images/map-desktop@2x.png 2x">
+        <source class="address__image-tablet" media="(min-width:768px)" width="768" type="image/png" height="400" srcset="./images/map-tabletp@1x.png 1x, ./images/map-tablet@2x.png 2x">
         <img class="address__image-mobile" src="./images/map-mobile@1x.png" width="320" height="362" alt="Карта адреса" srcset="./images/map-mobile@2x.png">
       </picture>
     </section>
