--- a/source/catalog.html
+++ b/source/catalog.html
@@ -30,7 +30,7 @@
           </picture>
         </div>
       </a>
-      <nav class="nav nav--open">
+      <nav class="nav nav--open nav--nojs">
         <button class="nav__toggle" type="button">
           <span class="visually-hidden">кнопка открытия меню</span>
         </button>
