--- a/source/index.html
+++ b/source/index.html
@@ -58,10 +58,10 @@
         <a class="cover__button" href="#">подобрать программу</a>
         <div class="cover__product">
           <picture>
-            <source class="cover__product--desktop" media=" (min-width:1440px)" width="552" type="image/png" height="499" srcset="./images/feed-hero-desktop@1x.png 1x,
+            <source media=" (min-width:1440px)" width="552" type="image/png" height="499" srcset="./images/feed-hero-desktop@1x.png 1x,
         ./images/feed-hero-desktop@2x.png 2x">
-            <source class="cover__product--tablet" media="(min-width:768px)" width="709" type="image/png" height="609" srcset="./images/feed-hero-tablet@1x.png 1x, ./images/feed-hero-tablet@2x.png 2x">
-            <img class="cover__product--mobile" src="./images/feed-hero-mobile@1x.png" width="280" height="270" alt="Корм для кошек" srcset=" ./images/feed-hero-mobile@2x.png 2x">
+            <source media="(min-width:768px)" width="709" type="image/png" height="609" srcset="./images/feed-hero-tablet@1x.png 1x, ./images/feed-hero-tablet@2x.png 2x">
+            <img src="./images/feed-hero-mobile@1x.png" width="280" height="270" alt="Корм для кошек" srcset=" ./images/feed-hero-mobile@2x.png 2x">
           </picture>
         </div>
       </div>
@@ -106,7 +106,7 @@
           <p class="how-work__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
         </li>
         <li class="how-work__item how-work__item--benefit">
-          <p class="how-work__text how-work__text--time">Уже через месяц наслаждайтесь изменениями к лучшему <span class="how-work__text--word-problem">вашего</span> <span class="how-work__text--word-problem-second">питомца!</span></p>
+          <p class="how-work__text how-work__text--time">Уже через месяц наслаждайтесь изменениями к лучшему <span class="how-work__problem how-work__problem--word-problem">вашего</span> <span class="how-work__problem how-work__problem--word-problem-second">питомца!</span></p>
         </li>
       </ul>
     </section>
